[package]
name = "nexo-core"
description   = "Agent runtime: event bus, sessions, plugin trait, heartbeat, A2A delegation."
version       = "0.1.1"
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = { workspace = true }
[features]
default = ["schema-validation"]
# Enables pre-handler JSON Schema validation of tool arguments.
schema-validation = ["dep:jsonschema"]
# Phase 79.10 — gated self-config tool. Off by default until
# security review. Compiling this feature exposes `Config { op:
# read | propose | apply }` per agent (still subject to the
# per-binding `config_tool.self_edit` YAML knob + the hard-coded
# denylist).
config-self-edit = ["dep:globset"]

[dependencies]
jsonschema = { version = "0.20", optional = true, default-features = false }
# Phase 79.10 — gated by `config-self-edit` feature. `nexo-setup`
# is pulled in lazily via the runtime call site (cannot be a hard
# dep here — `nexo-setup` already depends on `nexo-core`, so a
# direct dep would form a cycle).
globset    = { workspace = true, optional = true }
sha2        = { workspace = true }
hmac        = "0.12"
cron        = "0.12"
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
dashmap     = { workspace = true }
humantime   = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
nexo-config = { version = "0.1.1", path = "../config" }
nexo-broker = { version = "0.1.1", path = "../broker" }
nexo-auth = { version = "0.1.1", path = "../auth" }
tracing       = { workspace = true }
async-trait   = { workspace = true }
tokio-util    = { workspace = true }
nexo-llm = { version = "0.1.1", path = "../llm" }
nexo-lsp = { version = "0.1.1", path = "../lsp" }
nexo-memory = { version = "0.1.2", path = "../memory" }
nexo-extensions = { version = "0.1.1", path = "../extensions" }
nexo-mcp = { version = "0.1.1", path = "../mcp" }
nexo-taskflow = { version = "0.1.1", path = "../taskflow" }
nexo-web-search = { version = "0.1.1", path = "../web-search" }
nexo-pairing    = { version = "0.1.2", path = "../pairing" }
nexo-dispatch-tools = { version = "0.1.1", path = "../dispatch-tools" }
nexo-agent-registry = { version = "0.1.1", path = "../agent-registry" }
nexo-driver-claude  = { version = "0.1.1", path = "../driver-claude" }
nexo-driver-loop    = { version = "0.1.1", path = "../driver-loop" }
nexo-driver-types   = { version = "0.1.1", path = "../driver-types" }
nexo-project-tracker = { version = "0.1.1", path = "../project-tracker" }
futures         = { workspace = true }
arc-swap        = { workspace = true }
lru             = { workspace = true }
notify          = { workspace = true }
notify-debouncer-full = { workspace = true }
base64          = { workspace = true }
git2            = { workspace = true }
reqwest         = { workspace = true }
# Used by google_auth for URL-encoding OAuth parameters — already a
# transitive dep via reqwest so no new edges on the resolver.
serde_urlencoded = "0.7"
regex           = "1.10"
sqlx            = { workspace = true }
semver          = { workspace = true }

[dev-dependencies]
nexo-llm = { version = "0.1.1", path = "../llm", features = ["stub"] }
async-nats    = { workspace = true }
futures       = { workspace = true }
tempfile      = "3"
serial_test   = "3"
nexo-driver-permission = { version = "0.1.1", path = "../driver-permission" }
nexo-driver-claude     = { version = "0.1.1", path = "../driver-claude" }
