[package]
name = "nexo-dispatch-tools"
description = "Phase 67.D — agent-loop tools that dispatch / control / chain driver goals through DispatchGate."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }

[dependencies]
async-trait        = { workspace = true }
sqlx               = { workspace = true }
nexo-config        = { version = "0.1.1", path = "../config" }
nexo-driver-types  = { version = "0.1.1", path = "../driver-types" }
nexo-driver-claude = { version = "0.1.1", path = "../driver-claude" }
nexo-agent-registry = { version = "0.1.1", path = "../agent-registry" }
nexo-driver-loop    = { version = "0.1.1", path = "../driver-loop" }
nexo-project-tracker = { version = "0.1.1", path = "../project-tracker" }
nexo-pairing        = { version = "0.1.2", path = "../pairing" }
tokio               = { workspace = true, features = ["time", "process", "io-util"] }
chrono              = { workspace = true }
humantime-serde     = { workspace = true }
uuid                = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
nexo-driver-permission = { version = "0.1.1", path = "../driver-permission" }
async-trait = { workspace = true }
anyhow      = { workspace = true }
