[package]
name = "nexo-dispatch-tools"
description = "Phase 67.D — agent-loop tools that dispatch / control / chain driver goals through DispatchGate."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }

[dependencies]
anyhow              = { workspace = true }
async-trait         = { workspace = true }
chrono              = { workspace = true }
dashmap             = { workspace = true }
humantime           = { workspace = true }
humantime-serde     = { workspace = true }
nexo-agent-registry = { version = "0.1.1", path = "../agent-registry" }
nexo-config         = { version = "0.2.0", path = "../config" }
nexo-driver-claude  = { version = "0.1.1", path = "../driver-claude" }
nexo-driver-loop    = { version = "0.1.1", path = "../driver-loop" }
nexo-driver-permission = { version = "0.1.1", path = "../driver-permission" }
nexo-driver-types   = { version = "0.1.1", path = "../driver-types" }
nexo-pairing        = { version = "0.1.3", path = "../pairing" }
nexo-project-tracker = { version = "0.1.1", path = "../project-tracker" }
parking_lot         = "0.12"
serde               = { workspace = true }
serde_json          = { workspace = true }
sqlx                = { workspace = true }
thiserror           = { workspace = true }
tokio               = { workspace = true, features = ["time", "process", "io-util", "macros", "rt-multi-thread"] }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
uuid                = { workspace = true }

[features]
default = ["nats"]
nats    = ["dep:async-nats"]

[dependencies.async-nats]
workspace = true
optional  = true

[[bin]]
name = "nexo-driver-tools"
path = "src/bin/nexo_driver_tools.rs"

[dev-dependencies]
anyhow      = { workspace = true }
async-trait = { workspace = true }
tempfile    = "3"
tokio       = { workspace = true, features = ["macros", "rt-multi-thread"] }
