[package]
name = "nexo-driver-types"
description = "Types and traits for the Nexo driver subsystem (CLI/process orchestration under verifiable goals)."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[dependencies]
async-trait     = { workspace = true }
chrono          = { workspace = true }
humantime-serde = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tokio-util      = { workspace = true }
uuid            = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
tokio      = { workspace = true }
