[package]
name = "nexo-extensions"
description   = "Extension manifest, discovery, lifecycle, and stdio/NATS runtimes for Nexo."
version       = "0.2.0"
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = { workspace = true }
[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }
tokio-util = { workspace = true }
futures    = { workspace = true }
dashmap    = { workspace = true }
toml       = "0.8"
semver     = "1"
regex      = "1.10"
walkdir    = "2"
nexo-resilience = { version = "0.1.2", path = "../resilience" }
nexo-broker = { version = "0.1.2", path = "../broker" }
nexo-config = { version = "0.2.0", path = "../config" }
url             = "2"
async-trait     = { workspace = true }
uuid            = { workspace = true }
anyhow          = { workspace = true }
serde_yaml      = { workspace = true }
humantime-serde = "1"
notify          = { workspace = true }
notify-debouncer-full = { workspace = true }
sha2            = { workspace = true }
reqwest         = { workspace = true }

[dev-dependencies]
async-nats = { workspace = true }
tempfile   = "3"
wiremock   = "0.6"
nexo-mcp = { path = "../mcp" }
tokio      = { workspace = true, features = ["macros", "rt-multi-thread", "process", "io-util", "time", "sync"] }
tracing-subscriber = { workspace = true }

[[example]]
name = "echo_ext"
path = "examples/echo_ext.rs"
