[package]
name        = "nexo-fork"
description = "Phase 80.19 — fork-with-cache-share subagent infrastructure (KAIROS port)"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
homepage    = { workspace = true }
documentation = { workspace = true }
readme      = "README.md"

[lints]
workspace = true

[dependencies]
nexo-core             = { version = "0.2.0", path = "../core" }
nexo-llm              = { version = "0.2.0", path = "../llm" }
nexo-driver-types     = { version = "0.1.1", path = "../driver-types" }
nexo-driver-permission = { version = "0.1.1", path = "../driver-permission" }
nexo-agent-registry   = { version = "0.1.1", path = "../agent-registry" }
tokio               = { workspace = true }
tokio-util          = { workspace = true }
async-trait         = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
tracing             = { workspace = true }
uuid                = { workspace = true }
futures             = { workspace = true }
anyhow              = { workspace = true }

[dev-dependencies]
tokio               = { workspace = true }
nexo-broker         = { version = "0.1.2", path = "../broker" }
nexo-config         = { version = "0.2.0", path = "../config" }
tempfile            = "3"
