[package]
name = "nexo-llm"
description   = "LLM provider clients (MiniMax, OpenAI-compat, Anthropic, Gemini) with rate limiter and tool registry."
version       = "0.1.1"
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = { workspace = true }
[features]
default = []
# Historical: stubbed `AnyLlmClient::Stub` variant. After the registry refactor,
# tests instantiate fakes via `Arc<dyn LlmClient>` directly — feature is a no-op
# and kept only to avoid breaking external manifests that still mention it.
stub    = []

[dependencies]
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
async-trait  = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }
futures      = { workspace = true }
eventsource-stream = { workspace = true }
bytes        = { workspace = true }
dashmap      = { workspace = true }
nexo-config = { version = "0.1.1", path = "../config" }
nexo-resilience = { version = "0.1.1", path = "../resilience" }
sha2         = { workspace = true }
hex          = { workspace = true }
chrono       = { workspace = true }
base64       = { workspace = true }
tiktoken-rs  = { workspace = true }
blake3       = { workspace = true }
lru          = { workspace = true }
tempfile     = "3"

[dev-dependencies]
tokio-test = "0.4"
wiremock   = "0.6"
criterion  = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "sse_parsers"
harness = false
