[package]
name = "nexo-mcp"
description   = "MCP (Model Context Protocol) client and server runtime for Nexo agents."
version       = "0.1.2"
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

# Phase 27.1 — `src/bin/mock_mcp_server.rs` is a test fixture, not a
# shipped binary. Keep it out of release tarballs.
[package.metadata.dist]
dist = false
[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }
tokio-util = { workspace = true }
dashmap    = { workspace = true }
async-trait = { workspace = true }
parking_lot = "0.12"
nexo-resilience = { version = "0.1.1", path = "../resilience" }
nexo-extensions = { version = "0.1.2", path = "../extensions" }
nexo-config = { version = "0.1.4", path = "../config" }
nexo-broker = { version = "0.1.2", path = "../broker" }
nexo-llm = { version = "0.1.2", path = "../llm" }
chrono           = { workspace = true }
uuid             = { workspace = true }
futures          = { workspace = true }
futures-util     = "0.3"
sha2             = { workspace = true }
reqwest          = { workspace = true, features = ["stream"] }
url              = "2"
bytes            = { workspace = true }
notify           = { workspace = true }
notify-debouncer-full = { workspace = true }
anyhow           = { workspace = true }
serde_yaml       = { workspace = true }
lru              = { workspace = true }
# Phase 76.1 — HTTP+SSE server transport.
axum             = { version = "0.7", features = ["macros", "tokio"] }
tower            = { version = "0.5", features = ["limit", "util"] }
tower-http       = { version = "0.5", features = ["cors", "limit", "timeout", "trace"] }
# `governor` was considered for per-IP rate-limit; replaced by the
# in-tree `PerIpRateLimiter` (DashMap + token bucket) in 76.1 to
# keep dep surface minimal. Re-evaluate when 76.5 introduces the
# per-tenant / per-tool layer.
headers          = "0.4"
async-stream     = "0.3"
tokio-stream     = "0.1"
# Phase 76.3 — pluggable authentication.
jsonwebtoken     = "9"
subtle           = "2"
zeroize          = "1"
# Phase 76.4 — tenant id validation (NFKC normalization + percent-decode
# guards mirror claude-code-leak/src/memdir/teamMemPaths.ts:22-64).
unicode-normalization = "0.1"
percent-encoding      = "2"
# Phase 76.9 — typed JSON Schema derive for the `Tool` trait /
# `McpServerBuilder`. `0.8` until 1.0 stabilises (1.0 has breaking
# attribute-syntax changes still in flux).
schemars              = "0.8"
# Phase 76.11 — durable audit log via SQLite. Uses workspace
# `sqlx` 0.8 (already pulled by nexo-agent-registry / nexo-core),
# WAL + synchronous=NORMAL for the in-tree pattern.
sqlx                  = { workspace = true, features = ["sqlite", "runtime-tokio", "macros"] }

[features]
# Phase 76.12 — conformance + fuzz suite. Gated so normal `cargo test`
# stays fast; CI runs `--features server-conformance`.
server-conformance = []

[dev-dependencies]
tokio      = { workspace = true, features = ["macros", "rt-multi-thread", "process", "io-util", "time", "sync", "net"] }
tempfile   = "3"
tracing-subscriber = { workspace = true }
eventsource-stream = "0.2"
# Phase 76.3 — JWT signing fixtures (RSA keypair + JWKS server).
rsa        = "0.9"
rand       = "0.8"
base64     = "0.22"
# Phase 76.10 — serialise telemetry tests (module-global counters).
serial_test = "3"
# Phase 76.12 — property-based fuzz over parse_jsonrpc_frame.
proptest   = "1"

# Auto-discovered from `src/bin/mock_mcp_server.rs`. Used by
# `tests/mock_server_test.rs` via `CARGO_BIN_EXE_mock_mcp_server`.
