[package]
name = "agent-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
sqlx        = { workspace = true }
regex       = "1.10"
unicode-normalization = "0.1"
unicode-segmentation  = "1.12"
unicode-script        = "0.5"
agent-llm    = { path = "../llm" }
reqwest      = { workspace = true }
url          = "2"
sqlite-vec   = { workspace = true }
lru          = { workspace = true }
libsqlite3-sys = { workspace = true, features = ["bundled"] }

[dev-dependencies]
tempfile    = "3"
tokio       = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock    = "0.6"
