[package]
name = "nexo-memory"
description   = "Short-term, long-term (SQLite), and vector (sqlite-vec) memory layers for Nexo agents."
version       = "0.1.3"
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = { workspace = true }
[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
sqlx        = { workspace = true }
regex       = "1.10"
unicode-normalization = "0.1"
unicode-segmentation  = "1.12"
unicode-script        = "0.5"
nexo-llm = { version = "0.1.2", path = "../llm" }
reqwest      = { workspace = true }
url          = "2"
sqlite-vec   = { workspace = true }
lru          = { workspace = true }
libsqlite3-sys = { workspace = true, features = ["bundled"] }

[dev-dependencies]
tempfile    = "3"
tokio       = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock    = "0.6"
