[package]
name        = "nexo-microapp-sdk"
description = "Reusable runtime helpers for Phase 11 stdio microapps consuming the nexo-rs daemon (JSON-RPC dispatch loop, BindingContext parsing, typed replies)."
version       = "0.1.0"
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "README.md"
keywords      = ["nexo", "microapp", "extension", "agent", "sdk"]
categories    = ["api-bindings", "asynchronous"]

[lints]
workspace = true

[features]
default       = []
admin         = ["dep:dashmap"]
outbound      = []
test-harness  = []
webhook       = []
# Phase 82.10.m.b — generic helpers for `Microapp::with_notification_listener`
# bridges (decode `Value` → typed T → broadcast). Used by
# microapps that fan out daemon notifications to per-connection
# SSE streams.
notifications = []
# Phase 81.15.a — child-side `PluginAdapter` for out-of-tree
# subprocess plugins. Gated so existing microapp consumers don't
# pull the `nexo-plugin-manifest` + `nexo-broker` deps unless they
# author plugins. Plugin authors enable this feature in their
# Cargo.toml; microapp authors leave it off.
plugin = ["dep:nexo-plugin-manifest", "dep:nexo-broker", "dep:toml"]

[dependencies]
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
tokio       = { workspace = true, features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
nexo-tool-meta = { workspace = true }
uuid        = { workspace = true }
# Phase 82.10 — admin RPC pending-request map. Optional dep
# (only the `admin` feature pulls it). Keeps the default
# microapp dep tree slim.
dashmap     = { workspace = true, optional = true }
# Phase 81.15.a — gated by the `plugin` feature. Pulled only by
# plugin authors who use `PluginAdapter`; microapp authors leave
# the feature off and don't pay the dep cost.
nexo-plugin-manifest = { version = "0.1.0", path = "../plugin-manifest", optional = true }
nexo-broker = { version = "0.1.1", path = "../broker", optional = true }
toml = { version = "0.8", optional = true }

[dev-dependencies]
nexo-microapp-sdk = { path = ".", features = ["test-harness", "outbound"] }
tokio             = { workspace = true, features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
