[package]
name = "nexo-pairing"
description   = "Setup-code pairing store and DM-challenge gate for Nexo channel plugins."
version       = "0.1.1"
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[features]
default = ["qr-png"]
qr-png = ["dep:image"]

[dependencies]
anyhow         = { workspace = true }
async-trait    = { workspace = true }
chrono         = { workspace = true }
dashmap        = { workspace = true }
hex            = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sha2           = { workspace = true }
sqlx           = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
hmac           = "0.12"
subtle         = "2"
rand           = "0.8"
qrcode         = "0.14"
image          = { version = "0.25", default-features = false, features = ["png"], optional = true }
base64         = { workspace = true }

[dev-dependencies]
tempfile       = "3"
serde_json     = { workspace = true }
